Better run-time space efficiency for module collections